--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
+    "modularscale-sass": "3.0.5",
     "node-sass": "^4.9.0",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.18.2",
