--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Simple TaWo template",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack/webpack.config.prod.js  --colors",
-    "dev": "webpack-dev-server --open --config webpack/webpack.config.dev.js"
+    "build": "webpack --config webpack/webpack.config.prod.js  --colors && node deploy",
+    "dev": "webpack-dev-server --open --config webpack/webpack.config.dev.js",
+    "deploy": "node deploy"
   },
   "author": "Felix Michel",
   "license": "MIT",
@@ -46,6 +47,7 @@
     "modularscale-sass": "3.0.5",
     "node-sass": "^4.9.0",
     "sass-loader": "^6.0.7",
+    "sftp-sync-deploy": "0.7.1",
     "style-loader": "^0.18.2",
     "webpack": "^4.12.0",
     "webpack-cli": "^2.1.5",
@@ -53,6 +55,7 @@
     "webpack-merge": "^4.1.3"
   },
   "dependencies": {
-    "babel-polyfill": "6.26.0"
+    "babel-polyfill": "6.26.0",
+    "promise-ftp": "1.3.5"
   }
 }
