--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
     "webpack-merge": "^4.1.3"
   },
   "dependencies": {
-    "babel-polyfill": "6.26.0",
-    "promise-ftp": "1.3.5"
+    "babel-polyfill": "6.26.0"
   }
 }
